--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="izq">
                     <ul class="menu">
-                        <li><a class="enlace-inicio" target="blank" href="../html/Home.html">Inicio</a></li>
+                        <li><a class="enlace-inicio" target="blank" href="index.html">Inicio</a></li>
                         <li><a class="enlace-tematicas">Servicios</a>
                             <ul>
                                 <li><a href="extraccion.html" target="_blank">Extracciones</a></li>
