--- a/paginas/Galeria.html
+++ b/paginas/Galeria.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1,0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Galeria de imagenes</title>
-        <link rel="stylesheet" href="css/galeria.css">
+        <link rel="stylesheet" href="../css/galeria.css">
     </head>
     <body class="fondo-galeria">
         <div class="galeria">
@@ -13,7 +13,7 @@
             <div class="linea"></div>
             <div class="contenedor-imagenes">
                 <div class="imagen">
-                    <img src="imagenes/extraccion.jpg" height="245" width="400">
+                    <img src="../imagenes/extraccion.jpg" height="245" width="400">
                     <div class="overlay">
                         <h2>Extraccion</h2>
                         <h3>Adulto o niño<br>$500</h3>
@@ -21,49 +21,49 @@
                 </div>
 
                 <div class="imagen">
-                    <img src="imagenes/Ortodoncia1.jpg" height="245" width="400">
+                    <img src="../imagenes/Ortodoncia1.jpg" height="245" width="400">
                     <div class="overlay">
                         <h2>Ortodoncia</h2>
                         <h3>Adulto o niño<br>inferior y superior<br>$5000<br>Solo inferior o superior<br>$2500</h3>
                     </div>
                 </div>
                 <div class="imagen">
-                    <img src="imagenes/Terceros-Molares.jpg" height="245" width="400">
+                    <img src="../imagenes/Terceros-Molares.jpg" height="245" width="400">
                     <div class="overlay">
                         <h2>Cx 3ros</h2>
                         <h3>Adulto<br>$500</h3>
                     </div>
                 </div>
                 <div class="imagen">
-                    <img src="imagenes/endodoncia.jpg" height="245" width="400">
+                    <img src="../imagenes/endodoncia.jpg" height="245" width="400">
                     <div class="overlay">
                         <h2>Endodoncia</h2>
                         <h3>Adulto<br>$450</h3>
                     </div>
                 </div>
                 <div class="imagen">
-                    <img src="imagenes/resinas.jpg" height="245" width="400">
+                    <img src="../imagenes/resinas.jpg" height="245" width="400">
                     <div class="overlay">
                         <h2>Resinas</h2>
                         <h3>Adulto<br>$450</h3>
                     </div>
                 </div>
                 <div class="imagen">
-                    <img src="imagenes/limpieza.jpg" height="245" width="400">
+                    <img src="../imagenes/limpieza.jpg" height="245" width="400">
                     <div class="overlay">
                         <h2>Limpieza</h2>
                         <h3>Adulto o niño<br>$450</h3>
                     </div>
                 </div>
                 <div class="imagen">
-                    <img src="imagenes/protesis.jpg" height="245" width="400">
+                    <img src="../imagenes/protesis.jpg" height="245" width="400">
                     <div class="overlay">
                         <h2>Protesis</h2>
                         <h3>Adulto<br>$3000</h3>
                     </div>
                 </div>
                 <div class="imagen">
-                    <img src="imagenes/diagnostico.jpg" height="245" width="400">
+                    <img src="../imagenes/diagnostico.jpg" height="245" width="400">
                     <div class="overlay">
                         <h2>Diagnostico y Prevención</h2>
                         <h3>Adulto o niño<br>$200</h3>
