--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>Es un placer contribuir al bienestar de su familia.</p>
                 </div>
                 <div class="img-bienvenida">
-                    <img src="/imagenes/banner.png" alt="imagen de banner">
+                    <img src="imagenes/banner.png" alt="imagen de banner">
                 </div>
             </section>
             
