--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             <!--SECCION DE GALERIA-->
             <section class="seccion-galeria">
                 <div class="contenedor-galeria">
-                    <img src="/imagenes/img_galeria_1.png" alt="imagen 1 galeria">
-                    <img src="/imagenes/img_galeria_2.png" alt="imagen 2 galeria">
-                    <img src="/imagenes/img_galeria_3.png" alt="imagen 3 galeria">
-                    <img src="/imagenes/img_galeria_4.png" alt="imagen 4 galeria">
+                    <img src="imagenes/img_galeria_1.png" alt="imagen 1 galeria">
+                    <img src="imagenes/img_galeria_2.png" alt="imagen 2 galeria">
+                    <img src="imagenes/img_galeria_3.png" alt="imagen 3 galeria">
+                    <img src="imagenes/img_galeria_4.png" alt="imagen 4 galeria">
                 </div>
             </section>
 
@@ -164,8 +164,8 @@
 
                 <div class="seccion-metodos-pago">
                     <p>Aceptamos las siguientes formas de pago:</p>
-                    <img src="/imagenes/visa-logo.svg" alt="logotipo visa">
-                    <img src="/imagenes/money.svg" alt="logotipo efectivo">
+                    <img src="imagenes/visa-logo.svg" alt="logotipo visa">
+                    <img src="imagenes/money.svg" alt="logotipo efectivo">
                 </div>
 
                 <div class="seccion-datos-extra">
