--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Consultorio Dental Guadalupe</title>
         <link rel="stylesheet" type="text/css" href="css/estilos.css"/>
         <script src="https://kit.fontawesome.com/d0732293de.js" crossorigin="anonymous"></script>
