--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                             <img src="./assets/img/cliente_resenia_3.png" alt="foto reseña uno">
                             <div class="nombre-resenia">
                                 <h2>Keila Gomes</h2>
-                                <p> Totalmente recomendable, las consultas y la orientación que me proporcionarom tuvo un costo muy bajo.
+                                <p> Totalmente recomendable, las consultas y la orientación que me proporcionaron tuvo un costo muy bajo.
                                </p>
                                <div class="calificacion">
                                    <i class="fas fa-star"></i>
