scrool vertical arreglado

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet"></head>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&family=Poppins&display=swap" rel="stylesheet"></head>
         
         <!-- ICONS -->
         <script src="https://kit.fontawesome.com/d0732293de.js" crossorigin="anonymous"></script>
@@ -55,9 +55,9 @@
             <div class="seccion-bienvenida" id="home">
                 <div class="contenedor-bienvenida">
                     <div class="texto-bienvenida">
-                        <h2>bienvenido</h2>
+                        <h2>Expertos en salud bucal</h2>
                         <hr>
-                        <p>Es un placer contribuir al bienestar de su familia.</p>
+                        <p>Somos profesionales expertos en la ortodoncia y la salud bucal. Odontopediatría, implantología y más...</p>
                     </div>
                     <div class="img-bienvenida">
                         <img src="./assets/img/banner_2.png" alt="imagen de banner">
@@ -72,7 +72,7 @@
                 <div class="contenedor-servicios" id="servicios">
                     <!--TITULO SERVICIOS-->
                     <div class="titulo-seccion-servicios">
-                        <h2>Servicios</h2>
+                        <h2>Somos Especialistas en</h2>
                     </div>
                     <!--CONTENEDOR SERVICIOS-->
                     <div class="contenedor-servicios">
