--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
         <!-- CSS -->
         <!-- mobile-->
-        <link rel="stylesheet" media="(min-width: 400px)" type="text/css" href="./assets/css/mobile_tablet_styles.css"/>
+        <!-- <link rel="stylesheet" type="text/css" href="./assets/css/mobile_tablet_styles.css"/> -->
         
         <!-- pc -->
-        <link rel="stylesheet" media="(min-width: 1024px)" type="text/css" href="./assets/css/pc-estilos.css"/>
+        <link rel="stylesheet"  type="text/css" href="./assets/css/pc-estilos.css"/>
 
         <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
         <script src="https://kit.fontawesome.com/d0732293de.js" crossorigin="anonymous"></script>
 
         <!-- JS -->
-        <script src="/assets/js/menu.js" defer></script>
+        <script src="./assets/js/menu.js" defer></script>
     </head>
     <body class="fondo">       
         <header>
